Updated Add Prescription

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qrbarcodetools",
+  "name": "opticalretailapp",
   "version": "0.1.0",
   "private": true,
   "main": "electron/main.js",
